# COP-4520-Assignments

./: .gitignore  CMakeLists.txt  COP-4520-Assignments.sln  README.md
COP-4520-Assignments/: COP-4520-Assignments.cpp  COP-4520-Assignments.vcxproj  COP-4520-Assignments.vcxproj.filters
COP-4520-Assignments/src/: COP-4520-Assignments.cpp
COP-4520-Assignments/src/Assignment_Reports/: Assignment_1.md
COP-4520-Assignments/src/Assignments/: Assignment_1.cpp  Assingment_1.h
COP-4520-Assignments/src/Common/: Assignment.h
src/: CMakeLists.txt  COP-4520-Assignments.cpp
src/Assignments/: Assignment_1.cpp  Assignment_1.h  CMakeLists.txt
src/Assignments/Assignment Reports/: Assignment_1.md
src/Common/: Assignment.h  CMakeLists.txt
